--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 50vh;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: row;
@@ -87,7 +87,7 @@ body {
 }
 
 /* Style for .employee-cards */
-.employee-cards {
+.order-cards {
     display: flex;
     flex-wrap: wrap;
     /* Allows cards to wrap to the next line */
@@ -107,6 +107,25 @@ body {
         box-sizing: border-box;
             transition: transform 0.2s, box-shadow 0.2s;
             
+}
+
+.buttonArea{
+    background: #fff;
+        padding: 10px;
+        margin: 0px;
+        margin-left: 20px;
+        margin-right: 0px;
+        border-radius: 8px;
+        margin-bottom: 10px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-sizing: border-box;
+        transition: transform 0.2s, box-shadow 0.2s;
+}
+
+.buttonArea:hover {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    transform: scale(1.01);
+    transition: transform 0.2s, box-shadow 0.2s;
 }
 
 /* Style for .card */
